some layout issue in footer

--- a/Viatours/style.scss
+++ b/Viatours/style.scss
@@ -479,57 +479,73 @@ body {
   
 
   >div {
-      width: 1320px;
+    margin: auto;
+      max-width: 1320px;
+      width: 100%;
       height: 655.13px;
       top: 7722.44px;
       left: 300px;
   }
 
   #lay1 {
-      width: 372.76px;
+      max-width: 1290px;
+      width: 100%;
       height: 26px;
-      padding-top: 94.31px;
-      padding-left: 80px;
-
-
+      padding: 94.31px 80px 64.82px 80px;
+      border-bottom: 1px solid #EB662B26;
+      display: flex;
+      justify-content: space-between;
+      margin: auto;
+      box-sizing: border-box;
   }
-
-  p {
-      font-weight: bold;
+  h2{
+    font-size: 20px;
+    font-weight: 500;
   }
-
-  .left {
-      width: 74.22px;
-      height: 31.88px;
-      padding-top: 84.06px;
-      padding-left: 1045.48px;
-      white-space: nowrap;
+  p{
+    font-size: 14.41px;
+    font-weight: 400;
   }
-
+ 
   span {
       font-weight: bold;
   }
 
-  #contact {
-      width: 439.98px;
-      height: 390px;
-      margin-top: 89.12px;
-      margin-left: 74px;
-      white-space: nowrap;
-
-  }
-
+ 
   #flex {
+    width: 100%;
+      margin-top: 40px;
       display: flex;
       justify-content: center;
       justify-content: space-evenly;
   }
   #form>input{
+    border-radius: 12px;
+    padding-left: 21px;
       border: none;
-      height: 32px;
+      height: 60px;
+      width: 220px;
+  }
+  .footer-submit{
+    border-radius: 12px;
+    padding: 23px 30px;
+    background-color: white;
+    transform: translate(-20px);
+    border: 0;
   }
   .end>img{
-      justify-content: end;
+    width: 38px;
+    height: 24px;
+    justify-content: end;
   }
+  }
+  .copyrights{
+    padding: 24px 0px;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 1320px;
+    margin: auto;
+    font-size: 14.53px;
   }
 }
